[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
authors = ["Alec Desjardins"]
description = "A simple grep clone written in Rust"
readme = "README.md"
homepage = "https://github.com/alecdesjardins/grrs"
repository = "https://github.com/alecdesjardins/grrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
anyhow = "1.0.79"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
assert_fs = "1.1.0"